Superadmin completo
Cambios DB:
Aviso: añadí estado default
Entity Reembolso: La precisión es 4, pero la del pago es 6, entonces la cambié a 6 para que sea compatible.
Reserva: Estado completada añadido
Usuario: no he commiteado las validaciones aun por posibles conflictos
S3 service: añadí la opción para eliminar foto del s3